# JAviator

./: .gitignore  .hgignore  AUTHORS  CNAME  LICENSE  README.md  bootstrap-tweaks.css  footer.html  header.html  index.html
press/: Kronen_Zeitung_Salzburg_report_28_Sep_2007.html  ORF_OE1_Dimensionen_radio_talk_21_Nov_2008.html  PLUS_CS_department_brochure_Oct_2008.html  PLUS_NS_faculty_brochure_Feb_2007.html  PLUS_Presseinformation_3_Nov_2008.html  Salzburger_Fenster_report_Nov_2009.html  Salzburger_Nachrichten_insert_13_Dec_2008.html  UAS_Yearbook_2009_2010_insert_June_2009.html  index.html
publications/: Auerbach2007a.html  Auerbach2009.html  Craciunas2008a.html  Craciunas2010.html  Krainer2009.html  Pereira2012.html  Sengupta2012.html  Trummer2011.html  index.html
quadrotor/ControlTerminal/: .classpath  .project  ControlTerminal.cfg  basic_parameters.txt
quadrotor/ControlTerminal/models/: javiator.3ds  javiator3.3ds  javiator5.3ds  prop.3ds
quadrotor/JAviator3D/: .classpath  .project  config.xml  pom.xml
quadrotor/JAviator3D/Starfire/: ReadMe.txt  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  packages.html  serialized-form.html
quadrotor/JAviator3D/doc/: README
quadrotor/JAviator3D/models/: javiator2.3ds  javiator4.3ds  prop2.3ds
quadrotor/JoyDrv/: .classpath  .project  buildAll.sh  createDoc.bat  createJar.bat  makeDoc.sh  makeJar.sh  pom.xml  readme.txt  runTest.bat  runTest.sh
quadrotor/JoyDrv/linux/: LinuxJoystick.cpp  LinuxJoystick.h  Makefile  com_centralnexus_input_ExtendedJoystick.cpp  com_centralnexus_input_ExtendedJoystick.h  com_centralnexus_input_Joystick.cpp  com_centralnexus_input_Joystick.h
quadrotor/JoyDrv/win32/: Main.cpp  StdAfx.h  com_centralnexus_input_ExtendedJoystick.cpp  com_centralnexus_input_ExtendedJoystick.h  com_centralnexus_input_Joystick.cpp  com_centralnexus_input_Joystick.h  joystick.dsp  joystick.dsw  joystick.rc  joystick.sln  joystick.vcproj  resource.h
quadrotor/gumstix/: Makefile  Makefile.am  Makefile.in  autogen_arm.sh  configure  configure.in  controller-config.h  controller-config.h.in  cross.inc  diff.patch  make_arm.sh
quadrotor/gumstix/include/: Makefile  Makefile.am  Makefile.in  altitude_kf.h  attitude_ekf.h  average_filter.h  butter_filter.h  ccontrol.h  channel.h  comm_channel.h  command_data.h  communication.h  control_loop.h  controller.h  ctrl_params.h  extended_kalman.h  filter_param.h  filter_params.h  fir_lp_filter.h  iir_lp_filter.h  inertial_data.h  inertial_port.h  javiator_data.h  javiator_port.h  kalman_filter.h  low_pass_filter.h  median_filter.h  motor_offsets.h  motor_signals.h  motor_test_control_loop.h  navigation.h  outlier_filter.h  param.h  position_ekf.h  protocol.h  pwm_signals.h  rev_params.h  rotation_matrix.h  sensor_data.h  serial_channel.h  (+10 more)
quadrotor/gumstix/src/: Makefile  Makefile.am  Makefile.in  altitude_kf.c  attitude_ekf.c  average_filter.c  butter_filter.c  channel.c  command_data.c  communication.c  control  control_loop.c  control_loop_original.c  controller.c  ctrl_params.c  extended_kalman.c  fir_lp_filter.c  iir_lp_filter.c  inertial_data.c  inertial_port.c  javiator_data.c  javiator_port.c  kalman_filter.c  low_pass_filter.c  main.c  median_filter.c  motor_signals.c  motor_test_control_loop.c  motor_test_main.c  navigation.c  outlier_filter.c  param.c  pid_controller.c  pidd_controller.c  position_ekf.c  pwm_signals.c  restore_spi.c  rotation_matrix.c  sensor_data.c  serial_channel.c  (+13 more)
quadrotor/kernel_patches/: robostix_spi.patch
quadrotor/robostix/: Makefile  Rules.mk  avr-mem.sh
quadrotor/robostix/include/: adc.h  bmu09a.h  config.h  dm3gx1.h  javiator.h  leds.h  lsm215.h  ltc24.h  minia.h  parallel.h  ports.h  protocol.h  pwm.h  serial.h  signals.h  spi.h  srf10.h  timer.h  transfer.h  wdog.h
quadrotor/robostix/src/: adc.c  bmu09a.c  dm3gx1.c  leds.c  lsm215.c  ltc24.c  minia.c  parallel.c  ports.c  pwm.c  robo1.c  robo2.c  robostix.c  serial.c  spi.c  srf10.c  timer.c  wdog.c
quadrotor/shared/: javiator_data.h  motor_signals.h  protocol.h  transfer.h
quadrotor/tools/: basic_parameters.txt  motor_test  restart_robostix.sh  restore_spi  restore_ssp  restore_ssp.c  scp_control.sh  scp_robo1.sh  scp_robo2.sh  scp_robostix.sh  set_priority.sh  spi_start.sh  spi_stop.sh  sync_traces.sh
releases/: disclaimer.html  index.html
releases/control_system_demo_software/: download.html  how_to.html  index.html
releases/javiator_v1_prototype_blueprints/: download.html  index.html
releases/javiator_v2_advanced_blueprints/: disclaimer.html  download.html  index.html
releases/javiator_v2_power_board_layout/: disclaimer.html  download.html  index.html
system/: index.html
system/javiator_software_system/: flight_control_system.html  ground_control_system.html  helicopter_plant.html  index.html
system/javiator_v1_prototype_design/: index.html
system/javiator_v2_advanced_design/: index.html
system/javiator_v2_avionics_system/: index.html
system/javiator_v2_power_board/: index.html
talks/: index.html
team/: index.html
videos/: index.html
videos/javiator_project_first_public_appearance/: index.html  xufo_close_up.avi  xufo_demo_1.avi  xufo_demo_3.avi
videos/javiator_v1_first_all_java_flight/: index.html  oscillating_altitude_control.avi
videos/javiator_v1_propulsion_system_tests/: index.html  test_12_strong_motor_speed_change_reaction.avi  test_13_strong_motor_10_newton_at_12_amps.avi  test_14_strong_motor_moderate_rear_up.avi  test_15_strong_motor_three_step_rear_up.avi  test_16_strong_motor_immediate_rear_up.avi
videos/javiator_v1_single_rotor_hover_tests/: index.html  single_rotor_hover_test_1.avi  single_rotor_hover_test_2.avi  single_rotor_hover_test_4.avi
videos/javiator_v2_advanced_controller_tests/: index.html
videos/javiator_v2_attitude_controller_tests/: index.html
videos/javiator_v2_high_payload_tests/: index.html
videos/starmac_ii_adapted_controller_tests/: index.html
(+90 files in other folders)
