
nobase_noinst_HEADERS = \
    ccontrol.h \
    command_data.h \
    comm_channel.h \
    communication.h \
    controller.h \
    control_loop.h \
    ctrl_params.h \
    inertial_data.h \
    inertial_port.h \
    javiator_data.h \
    javiator_port.h \
    kalman_filter.h \
    low_pass_filter.h \
    median_filter.h \
    motor_offsets.h \
    motor_signals.h \
    protocol.h \
    rev_params.h \
    sensor_data.h \
    serial_channel.h \
    socket_channel.h \
    spi_channel.h \
    terminal_port.h \
    trace_data.h \
    transfer.h \
    us_timer.h

