
nobase_noinst_HEADERS = \
    average_filter.h \
    command_data.h \
    comm_channel.h \
    communication.h \
    controller.h \
    control_loop.h \
    ctrl_params.h \
    extended_kalman.h \
    javiator_data.h \
    javiator_port.h \
    kalman_filter.h \
    low_pass_filter.h \
    median_filter.h \
    motor_signals.h \
    sensor_data.h \
    serial_channel.h \
    socket_channel.h \
    terminal_port.h \
    trace_data.h \
    transformation.h \
    ubisense_port.h \
    us_timer.h

