
nobase_noinst_HEADERS = \
    attitude_ekf.h \
    average_filter.h \
    command_data.h \
    comm_channel.h \
    communication.h \
    controller.h \
    control_loop.h \
    ctrl_params.h \
    fir_lp_filter.h \
    iir_lp_filter.h \
    javiator_data.h \
    javiator_port.h \
    median_filter.h \
    motor_signals.h \
    outlier_filter.h \
    position_ekf.h \
    sensor_data.h \
    serial_channel.h \
    socket_channel.h \
    terminal_port.h \
    trace_data.h \
    transformation.h \
    ubisense_port.h \
    us_timer.h

